--- a/index.html
+++ b/index.html
@@ -3,16 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ingeniería del software</title>
+    <title>Document</title>
 </head>
 <body>
     <h1>Ingenieria del software</h1>
     <h2>Linux</h2>
-
     <p>
-        Linux es uno de los principales sistemas operativos para el manejo empresarial    </p>
+        Linux es un sistema operativo de software libre con código abierto, que es muy estable, seguro y goza de una interfaz multiuso y multitarea. Fue diseñado para ser libre y gratuito. Es poseedor de increíbles distribuciones entre su abanico de opciones, que pueden ser usadas desde el entorno familiar, hasta el nivel empresarial. Se caracteriza por su ligereza y eficiencia en el uso de recursos limitados. Todas sus distribuciones son alternativas ideales para software de código cerrado o pago.
     </p>
-    <img src="Linux" alt="">
-    </body>
+<img src="linux.PNG" alt="imagen de linux">
 
+<table border="1">
+    <tr>
+    <th>
+        Experiencias
+    </th>
+    <th>
+        Crecimiento
+    </th>
+    <th>
+        Aporte
+    </th>
+    </tr>
+    <tr>
+        <td>
+            Ir en moto hasta Patagonia
+        </td>
+        <td>
+            Certficarme en python
+        </td>
+        <td>
+            Crear un libro
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Meditar en un monasterio hindu
+        </td>
+        <td>
+            Poner un negocio
+        </td>
+        <td>
+            Escribir una cancion social
+        </td>
+    </tr>
+</table>
+
+</body>
 </html>
